Fix color contrast ratio of navbar feedback link (#905)
Update default color to white from UCLA Gold

--- a/app/assets/stylesheets/theme_ursus/header/_ur-navbar.scss
+++ b/app/assets/stylesheets/theme_ursus/header/_ur-navbar.scss
@@ -28,14 +28,6 @@
   }
 }
 
-.site-navbar__item-link-feedback {
-  color: $ucla-gold;
-
-  &:visited {
-    color: $ucla-gold;
-  }
-}
-
 .site-navbar__wrapper--ursus {
   @media (max-width: 991px) {
     .navbar-collapse {
